--- a/templates/genres.html
+++ b/templates/genres.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>RecoMovie</title>
+    <title>Picture Perfect</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -31,7 +31,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="/home">RecoMovie</a>
+        <a class="navbar-brand" href="/home">Picture Perfect</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -50,7 +50,7 @@
 
       <div class="ml-container" style="display: block;">
         <br><br><br><br><br><br>
-        <center><h1 style="">Recommend based on Genre & Year</h1></center>
+        <center><h1>Recommend based on Genre & Year</h1></center>
         <form action = "/genre" method = "POST">
         <div class="form-group shadow-textarea" style="margin-top: 30px;text-align: center;color: white;">
             <input type="text" name="Genre" class="movie form-control" id="autoComplete" placeholder="Enter the Genre" style="background-color: #ffffff;border-color:#ffffff;width: 60%;color: #181818" required="required" />
