--- a/templates/home.html
+++ b/templates/home.html
@@ -103,7 +103,7 @@
 
       
       <center>
-        <img src="https://img.freepik.com/premium-vector/vintage-video-camera-logo-movie-cinema-production_57043-425.jpg" alt="Logo" height="100" height="100"/>
+        <img src="logo.png" alt="Logo" width="100" height="100"/>
         <h1>Picture Perfect</h1>
       </center>
       <div
