--- a/templates/home.html
+++ b/templates/home.html
@@ -103,7 +103,7 @@
 
       
       <center>
-        <img src="templates\logo.png" alt="Logo" width="100" height="100"/>
+        <img src="../static/logo.png" alt="Logo" width="100" height="100"/>
         <h1>Picture Perfect</h1>
       </center>
       <div
